Fix bug "Flow items are mis-aligned to grid". Fixes #18

--- a/stylesheets/zen/_grids.scss
+++ b/stylesheets/zen/_grids.scss
@@ -263,20 +263,6 @@ $zen-reverse-all-floats: false !default;
   }
   $rev: zen-direction-flip($dir);
 
-  // Ensure the HTML item either has a full gutter or no gutter on each side.
-  @if $alpha-gutter {
-    margin-#{$dir}: zen-half-gutter($gutter-width, $rev);
-  }
-  @else {
-    margin-#{$dir}: -(zen-half-gutter($gutter-width, $dir));
-  }
-  @if $omega-gutter {
-    margin-#{$rev}: zen-half-gutter($gutter-width, $dir);
-  }
-  @else {
-    margin-#{$rev}: -(zen-half-gutter($gutter-width, $rev));
-  }
-
   // Calculate the item's width.
   $width: zen-grid-item-width($column-span, $columns, $grid-width);
   @if $box-sizing == content-box {
@@ -292,6 +278,20 @@ $zen-reverse-all-floats: false !default;
   // Auto-apply the unit base mixin.
   @if $auto-include-flow-item-base {
     @include zen-grid-item-base($gutter-width, $box-sizing);
+  }
+
+  // Ensure the HTML item either has a full gutter or no gutter on each side.
+  padding-#{$dir}: 0;
+  @if $alpha-gutter {
+    margin-#{$dir}: $gutter-width;
+  }
+  $offset: ($columns - $column-span) * $gutter-width / $columns;
+  padding-#{$rev}: $offset;
+  @if $omega-gutter {
+    margin-#{$rev}: $gutter-width - $offset;
+  }
+  @else {
+    margin-#{$rev}: -($offset);
   }
 }
 
